--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
+streamlit==1.35.0
+opencv-python-headless==4.9.0.80
+numpy==1.26.4
+pandas==2.2.2
+pillow==10.3.0
+fpdf2==2.7.8
+streamlit-drawable-canvas==0.9.3
 
