--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.35.0
-opencv-python-headless==4.9.0.80
-pillow==10.3.0
-numpy==1.26.4
-pandas==2.2.2
-fpdf2==2.7.8
+streamlit>=1.32.2
+opencv-python-headless>=4.9.0.80
+numpy>=1.24.0
+pandas>=2.2.1
+fpdf>=1.7.2
+Pillow>=10.2.0
