--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,11 +1,8 @@
 [server]
 headless = true
+port = $PORT
 enableCORS = false
-enableXsrfProtection = false
 
-[theme]
-primaryColor = "#4CAF50"
-backgroundColor = "#F5F5F5"
-secondaryBackgroundColor = "#E0E0E0"
-textColor = "#262730"
-font = "sans serif"
+[browser]
+gatherUsageStats = false
+serverAddress = "0.0.0.0"
